array.island.Island.scala.error
Compilation error:
Island:10: error: type mismatch;
 found   : Unit
 required: Int
           for (i<-0 to num.length-1){
                 ^Island:3: error: type mismatch;
 found   : Unit
 required: Int
  if (num.length>2) {
  ^